fixed alignment

--- a/css/master.css
+++ b/css/master.css
@@ -60,8 +60,11 @@
 
 section
 {
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100vh;
+	padding: 0 0 0 0;
 	box-sizing: border-box;
 }
 
@@ -70,7 +73,7 @@ section.sec1
 	background-color: white;
 	background-image: url(building3.jpg);
 	background-size: cover;
-	margin-top: 100px;
+	margin-top: 50px;
 	background-position: center top;
 	background-repeat: no-repeat;
 
@@ -79,28 +82,26 @@ section.sec1
 section.sec1 h1 {
 	font-family: 'Lato', serif;
     font-size: 110px;
+    text-align: center;
     color: white;
     width: 100%;
 	height: 100px;
 	position: relative; /* or absolute */
     top: 50%;
-    left: 50%;
     margin-top: -170px;
-    margin-left: -220px;
     background-attachment: fixed;
 }
 
 section.sec1 h2 {
 	font-family: 'Lato', serif;
     font-size: 40px;
+    text-align: center;
     color: white;
     width: 100%;
 	height: 100px;
 	position: relative; /* or absolute */
     top: 50%;
-    left: 50%;
     margin-top: -50px;
-    margin-left: -160px;
     background-attachment: fixed;
 }
 
@@ -140,6 +141,7 @@ section.footer
 {
 	font-family: 'Lato', serif;
 	color: white;
+	text-align: center;
 	padding: 100px;
 	height: auto;
 	background-color: black;
@@ -147,11 +149,11 @@ section.footer
 
 section.footer ul {
 	margin: 0;
-	left: 50%;
-	margin-left: -200px;
 	position: relative;
 	display: flex;
 	float: center;
+	padding-left: 50%;
+	margin-left: -190px;
 }
 
 section.footer ul li
